# openlocalrouter

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml
docs/: design.md  detailed-design.md  entity-model.md  ui-design.md  usage-tracking-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/lib/: api.ts  auth.ts
frontend/src/pages/: ApiKeysPage.tsx  DashboardPage.tsx  EndpointsPage.tsx  LoginPage.tsx  ProvidersPage.tsx  UsageMyPage.tsx  UsagePage.tsx  UsageSharedPage.tsx  UsersPage.tsx
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/admin/: api_keys.rs  auth.rs  dashboard.rs  endpoints.rs  mod.rs  presets.rs  providers.rs  usage.rs  users.rs
src/db/: dao.rs  mod.rs  schema.rs
src/router/: handler.rs  mod.rs  server.rs  sse.rs  streaming.rs  transform.rs  types.rs  usage.rs
